--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "karma": "^0.13.0",
     "karma-chrome-launcher": "^0.2.2",
     "karma-firefox-launcher": "^0.1.7",
-    "karma-jasmine": "^0.2.2"
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-jasmine": "^0.2.2",
+    "protractor": "4.0.9"
   }
 }
